fix: search style alignment

--- a/beaconnect-react-app/src/pages/Main/pages/Home/components/home.css
+++ b/beaconnect-react-app/src/pages/Main/pages/Home/components/home.css
@@ -477,11 +477,12 @@
   position: relative;
   background: #fff;
   padding: 20px;
-  border-radius: 5px;
-  width: 82.5%;
-  margin: 20px auto 0 0;
+  border-radius: 20px;
+  width: 90%;
+  height: calc(100vh - 80px);
+  margin: 20px auto 0 auto;
   box-shadow: 1px 2px 3px 0 rgba(0, 0, 0, 0.2);
-  overflow: scroll;
+  overflow: hidden;
 }
 
 .recent-suggestion-section {
