--- a/beaconnect-react-app/src/pages/Main/pages/Search/search.css
+++ b/beaconnect-react-app/src/pages/Main/pages/Search/search.css
@@ -210,7 +210,7 @@
   align-items: center;
   width: calc(100% - 22px);
   border: 1px solid #ccc;
-  border-radius: 20px;
+  border-radius: 10px;
   padding: 10px 10px;
   margin: 10px 0;
 }
@@ -241,9 +241,9 @@
   outline: none;
   border: none;
   color: #757575;
-  border-radius: 20px;
-  padding: 10px 10px;
-  width: 60px;
+  border-radius: 5px;
+  padding: 10px 15px;
+  width: 70px;
 }
 
 @media only screen and (max-width: 955px) {
@@ -252,16 +252,7 @@
   }
 
   .search-result-people-container {
-    position: relative;
-    display: grid;
     grid-template-columns: 1fr;
-    justify-content: center;
-    align-items: center;
-    width: calc(100% - 22px);
-    border: 1px solid #ccc;
-    border-radius: 20px;
-    padding: 10px 10px;
-    margin: 10px 0;
   }
 
   .search-result-user-icon {
